[fix]修正view.ReadUInt32读取越界问题，协议中需要读取3字节整数，为了方便使用ReadUInt32读取4字节整数，再截取最高字节，该方法能够提升性能，但是遇到文件最后3个字节时，读取4字节将会报错。

--- a/NewLife.IP/NewLife.IP.csproj
+++ b/NewLife.IP/NewLife.IP.csproj
@@ -17,6 +17,7 @@
     <LangVersion>latest</LangVersion>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\Doc\newlife.snk</AssemblyOriginatorKeyFile>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <PropertyGroup>
